Add example datatable

--- a/package.json
+++ b/package.json
@@ -11,6 +11,19 @@
         "@casl/ability": "^6.2.0",
         "@casl/vue": "^2.2.0",
         "@floating-ui/dom": "1.0.4",
+        "@fortawesome/fontawesome-svg-core": "^6.4.2",
+        "@fortawesome/free-brands-svg-icons": "^6.4.2",
+        "@fortawesome/free-regular-svg-icons": "^6.4.2",
+        "@fortawesome/free-solid-svg-icons": "^6.4.2",
+        "@fortawesome/pro-duotone-svg-icons": "^6.4.2",
+        "@fortawesome/pro-light-svg-icons": "^6.4.2",
+        "@fortawesome/pro-regular-svg-icons": "^6.4.2",
+        "@fortawesome/pro-solid-svg-icons": "^6.4.2",
+        "@fortawesome/pro-thin-svg-icons": "^6.4.2",
+        "@fortawesome/sharp-light-svg-icons": "^6.4.2",
+        "@fortawesome/sharp-regular-svg-icons": "^6.4.2",
+        "@fortawesome/sharp-solid-svg-icons": "^6.4.2",
+        "@fortawesome/vue-fontawesome": "^3.0.3",
         "@tabler/icons": "^1.97.0",
         "@vueuse/core": "^9.5.0",
         "@vueuse/math": "^9.5.0",
