--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
         "vue3-dropzone": "^2.0.1",
         "vue3-perfect-scrollbar": "^1.6.0",
         "vue3-recaptcha-v2": "^1.0.1",
-        "vuetify": "^3.1.11",
+        "vuetify": "3.3.16",
         "webfontloader": "^1.6.28"
     },
     "devDependencies": {
