--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "dev": "vite --host",
         "build": "vite build",
         "preview": "vite preview --port 5050",
-        "lint": "eslint . -c .eslintrc.js --fix --ext .ts,.js,.vue,.tsx,.jsx",
+        "lint": "eslint .eslintrc.js --fix --ext .ts,.js,.vue,.tsx,.jsx --max-warnings=0",
         "build:icons": "node resources/js/@iconify/build-icons.js"
     },
     "dependencies": {
