--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
         "dev": "vite --host",
         "build": "vite build",
         "preview": "vite preview --port 5050",
-
         "lint:js": "eslint .eslintrc.js --fix --ext .ts,.js,.vue,.tsx,.jsx --max-warnings=0",
-        "lint:css": "stylelint resources/**/*.{vue,css} --fix --max-warnings=0",
-        
+        "lint:css": "stylelint --fix --max-warnings=0",
         "build:icons": "node resources/js/@iconify/build-icons.js"
     },
     "dependencies": {
@@ -87,10 +85,12 @@
         "laravel-vite-plugin": "^0.7.0",
         "postcss": "^8.4.18",
         "postcss-html": "^1.5.0",
+        "postcss-scss": "^4.0.9",
         "stylelint": "^14.15.0",
         "stylelint-config-idiomatic-order": "^9.0.0",
         "stylelint-config-recommended-vue": "^1.5.0",
         "stylelint-config-standard-scss": "^6.1.0",
+        "stylelint-scss": "^5.3.2",
         "stylelint-use-logical-spec": "^4.1.0",
         "tailwindcss": "^3.2.1",
         "unplugin-auto-import": "^0.11.4",
