--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,8 @@
 {
     "extends": [
-        "stylelint-config-recommended-vue"
+        "stylelint-config-recommended-vue",
+        "stylelint-config-recommended-scss",
+        "stylelint-scss"
     ],
     "rules": {
         "at-rule-no-unknown": null
