--- a/.stylelintrc
+++ b/.stylelintrc
@@ -7,6 +7,7 @@
     "rules": {
         "at-rule-no-unknown": null,
         "selector-class-pattern": null,
-        "max-line-length": null
+        "max-line-length": null,
+        "no-descending-specificity": null
     }
   }
