--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
         "preview": "vite preview --port 5050",
         "lint:js": "eslint .eslintrc.js --fix --ext .ts,.js,.vue,.tsx,.jsx --max-warnings=0",
         "lint:css": "stylelint --fix --max-warnings=0",
+        "lint:js:fix": "eslint ./resources .eslintrc.js --fix --ext .ts,.js,.vue,.tsx,.jsx --max-warnings=0",
+        "lint:css:fix": "stylelint resources/**/*.{css,scss,vue} --fix --max-warnings=0",
         "build:icons": "node resources/js/@iconify/build-icons.js"
     },
     "dependencies": {
@@ -90,6 +92,7 @@
         "stylelint-config-idiomatic-order": "^9.0.0",
         "stylelint-config-recommended-vue": "^1.5.0",
         "stylelint-config-standard-scss": "^6.1.0",
+        "stylelint-config-standard-vue": "^1.0.0",
         "stylelint-scss": "^5.3.2",
         "stylelint-use-logical-spec": "^4.1.0",
         "tailwindcss": "^3.2.1",
