--- a/script/settings.json
+++ b/script/settings.json
@@ -1,12 +1,6 @@
 {
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": "explicit",
-    "source.fixAll.stylelint": "explicit"
+    "source.fixAll.eslint": true
   },
-  "editor.formatOnSave": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.tabSize": 2,
-  "editor.detectIndentation": false,
-  "eslint.alwaysShowStatus": true,
-  "files.eol": "\n"
+  "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"]
 }
