--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://15xb.test
+APP_URL=http://sample.test
 
 SANCTUM_STATEFUL_DOMAINS="15xb.test"
 
@@ -14,7 +14,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
-DB_USERNAME=15xb
+DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
